Allow doctrine/dbal 3

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=8.0",
         "doctrine/event-manager": "^1.1",
         "doctrine/orm": "^2.12",
-        "doctrine/dbal": "^2.13"
+        "doctrine/dbal": "^2.13 || ^3.3"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.2",
