--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "doctrine/event-manager": "^1.1",
+        "doctrine/event-manager": "^1.1 || ^2.0",
         "doctrine/orm": "^2.12",
         "doctrine/dbal": "^2.13 || ^3.3"
     },
