run on pull-request

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: "PHP"
 on:
     schedule:
         -   cron:  '0 5 * * *'
-    pull_request:
+    pull_request: ~
     push:
         branches:
             - "develop"
