--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: "PHP"
 on:
     schedule:
         -   cron:  '0 5 * * *'
-    pull_request:
+    pull_request: ~
     push:
         branches:
             - "develop"
@@ -24,27 +24,38 @@ jobs:
                     - "8.0"
 
         steps:
-            - name: "Checkout"
-              uses: "actions/checkout@v2"
+            -
+                name: "Checkout"
+                uses: "actions/checkout@v3"
+                with:
+                    ref: "${{ github.head_ref }}"
 
-            - name: "Install PHP with extensions"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  coverage: "none"
-                  extensions: "${{ env.REQUIRED_PHP_EXTENSIONS }}"
-                  php-version: "${{ matrix.php-version }}"
+            -
+                name: "Install PHP with extensions"
+                uses: "shivammathur/setup-php@2.24.0"
+                with:
+                    coverage: "none"
+                    extensions: "${{ env.REQUIRED_PHP_EXTENSIONS }}"
+                    php-version: "${{ matrix.php-version }}"
+                    tools: composer:v2
 
-            - name: "Validate composer.json"
-              run: "composer validate"
+            -
+                name: "Validate composer.json"
+                run: "composer validate"
 
-            - name: "Install dependencies with composer"
-              uses: "ramsey/composer-install@1.3.0"
+            -
+                name: "Composer install"
+                uses: "ramsey/composer-install@2.2.0"
+                with:
+                    composer-options: "--no-scripts"
 
-            - name: "Composer normalize"
-              run: "composer normalize"
+            -
+                name: "Run ergebnis/composer-normalize"
+                run: "composer normalize"
 
-            - name: "Check code style"
-              run: "composer cs-check"
+            -
+                name: "Check code style"
+                run: "composer cs-check"
 
     static-code-analysis:
         name: "Static Code Analysis"
@@ -57,21 +68,30 @@ jobs:
                     - "8.0"
 
         steps:
-            - name: "Checkout"
-              uses: "actions/checkout@v2"
+            -
+                name: "Checkout"
+                uses: "actions/checkout@v3"
+                with:
+                    ref: "${{ github.head_ref }}"
 
-            - name: "Install PHP with extensions"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                  coverage: "none"
-                  extensions: "${{ env.REQUIRED_PHP_EXTENSIONS }}"
-                  php-version: "${{ matrix.php-version }}"
+            -
+                name: "Install PHP with extensions"
+                uses: "shivammathur/setup-php@2.24.0"
+                with:
+                    coverage: "none"
+                    extensions: "${{ env.REQUIRED_PHP_EXTENSIONS }}"
+                    php-version: "${{ matrix.php-version }}"
+                    tools: composer:v2
 
-            - name: "Install dependencies with composer"
-              uses: "ramsey/composer-install@1.3.0"
+            -
+                name: "Composer install"
+                uses: "ramsey/composer-install@2.2.0"
+                with:
+                    composer-options: "--no-scripts"
 
-            - name: "Static code analysis"
-              run: "composer phpstan"
+            -
+                name: "Static code analysis"
+                run: "composer phpstan"
 
     tests:
         name: "Tests"
@@ -84,21 +104,31 @@ jobs:
                     - "8.0"
 
         steps:
-            - name: "Checkout"
-              uses: "actions/checkout@v2"
+            -
+                name: "Checkout"
+                uses: "actions/checkout@v3"
+                with:
+                    ref: "${{ github.head_ref }}"
 
-            - name: "Install PHP with extensions"
-              uses: "shivammathur/setup-php@v2"
-              with:
-                coverage: "pcov"
-                extensions: "${{ env.REQUIRED_PHP_EXTENSIONS }}"
-                php-version: "${{ matrix.php-version }}"
+            -
+                name: "Install PHP with extensions"
+                uses: "shivammathur/setup-php@2.24.0"
+                with:
+                    coverage: "none"
+                    extensions: "${{ env.REQUIRED_PHP_EXTENSIONS }}"
+                    php-version: "${{ matrix.php-version }}"
+                    tools: composer:v2
 
-            - name: "Install dependencies with composer"
-              uses: "ramsey/composer-install@1.3.0"
+            -
+                name: "Composer install"
+                uses: "ramsey/composer-install@2.2.0"
+                with:
+                    composer-options: "--no-scripts"
 
-            - name: "Run unit tests"
-              run: "vendor/bin/phpunit --configuration=phpunit.xml.dist --coverage-clover=.build/logs/clover.xml"
+            -
+                name: "Run unit tests"
+                run: "vendor/bin/phpunit --configuration=phpunit.xml.dist --coverage-clover=.build/logs/clover.xml"
 
-            - name: "Send code coverage report to Codecov.io"
-              run: "bash <(curl -s https://codecov.io/bash)"
+            -
+                name: "Send code coverage report to Codecov.io"
+                run: "bash <(curl -s https://codecov.io/bash)"
